Update changelog action to our needs
Updated the create_changelog.sh script as follows:

- Skipped verifying that the changelog was already updated.
  They check if there's a commit starting with 'autogen',
  but we will handle this in an action step.
- They use a 'package.json' in all their repositories to install
  dependencies, but we don't have it, so I tried to download it manually.
- Removed the use of their complex configuration, which is not what we
  need right now.

Updated the changelog action with the following changes:

- Updated the checkout version to the newest.
- Updated GitHub client settings.
- Used our 'create_changelog.sh'.
- Added a step to check if the changelog was modified.
- Updated commit message.

--- a/changelog/action.yml
+++ b/changelog/action.yml
@@ -9,28 +9,35 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: ory/ci/checkout@master
+    - uses: actions/checkout@v4
       with:
         token: ${{ inputs.token }}
         fetch-depth: 0
-    - name: set up the Git client
+    - name: Set up the Git client
       run: |
-        git config --global user.email "60093411+ory-bot@users.noreply.github.com"
-        git config --global user.name "ory-bot"
+        git config --global user.name "Dale Concourse"
+        git config --global user.email "bot@nearbycomputing.com"
       shell: bash
-    - name: create the changelog
+    - name: Create the changelog
       run: |
-        curl -sSfL https://raw.githubusercontent.com/ory/ci/master/changelog/create_changelog.sh | bash
+        curl -sSfL https://raw.githubusercontent.com/nbycomp/ory-github-actions/nbycomp/changelog/create_changelog.sh | bash
       shell: bash
-    - name: commit the changes
-      if: ${{ github.ref_name == 'master' || github.ref_type == 'tag' }}
+    - name: Check if CHANGELOG.md was modified
+      id: check_changelog
+      run: |
+        if git status --short | grep -q 'CHANGELOG.md'; then
+          echo "CHANGELOG modified" && echo "CHANGELOG_MODIFIED=true" >> $GITHUB_OUTPUT;
+        fi
+      shell: bash
+    - name: Commit the changes
+      if: ${{ steps.check_changelog.outputs.CHANGELOG_MODIFIED == 'true' }}
       env:
-        GITHUB_TOKEN: ${{ inputs.token || github.token }}
+        GITHUB_TOKEN: ${{ inputs.token }}
       run: |
         branch="$(date +%s)"
         git checkout -b "$branch" || true
         git add CHANGELOG.md || true
-        git commit -m "autogen(docs): regenerate and update changelog" -m "[skip ci]" || true
+        git commit -m "ci(docs): Update changelog" || true
         git pull origin master --rebase || true
         git push origin HEAD:master || true
       shell: bash
