--- a/changelog/action.yml
+++ b/changelog/action.yml
@@ -9,7 +9,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: ory/ci/checkout@master
+    - uses: nbycomp/ory-github-actions/checkout@master
       with:
         token: ${{ inputs.token }}
         fetch-depth: 0
@@ -20,7 +20,7 @@ runs:
       shell: bash
     - name: create the changelog
       run: |
-        curl -sSfL https://raw.githubusercontent.com/ory/ci/master/changelog/create_changelog.sh | bash
+        curl -sSfL https://raw.githubusercontent.com/nbycomp/ory-github-actions/nbycomp-actions/changelog/create_changelog.sh | bash
       shell: bash
     - name: commit the changes
       if: ${{ github.ref_name == 'master' || github.ref_type == 'tag' }}
