--- a/changelog/action.yml
+++ b/changelog/action.yml
@@ -15,8 +15,8 @@ runs:
         fetch-depth: 0
     - name: set up the Git client
       run: |
-        git config --global user.email "60093411+ory-bot@users.noreply.github.com"
-        git config --global user.name "ory-bot"
+        git config --global user.name 'Github Actions'
+        git config --global user.email 'github-actions@github.com'
       shell: bash
     - name: create the changelog
       run: |
